Bump crysknife (di) to 0.10, update dependencies and migrate to new J2CLUtils API
Replace commons-io and commons-text with standard Java APIs. Migrate
from createDeclarationMethodDescriptor/createFieldDescriptor to
getMethodMangledName/getVariableMangledName. Update Maven plugin
versions, jsoup, javaparser, mockito, and processors to 0.10.

Signed-off-by: Dmitrii Tikhomirov <chani.liet@gmail.com>